templatia-derive/tests/compile_fail/consecutive_disallowed.rs
use templatia::Template;

#[derive(Template)]
#[templatia(template = "{first}{second}")]
struct BadConsecutive {
    first: String,
    second: String,
}
